<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/passajir_drawable">


    <ImageView
        android:id="@+id/icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_frame_icon"
        app:layout_constraintBottom_toTopOf="@id/frame_order_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/frame_order_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frame_order_title"
        android:textColor="@color/realWhite"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/card"
        app:layout_constraintLeft_toLeftOf="@id/icon"
        app:layout_constraintRight_toRightOf="@id/icon"
        app:layout_constraintTop_toBottomOf="@id/icon" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/realWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="159dp"
        android:layout_margin="14dp"
        app:cardCornerRadius="6dp"
        app:cardElevation="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/markFrame"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_margin="25dp"
                android:src="@drawable/ic_mark_frame"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="Чтобы мы могли забрать вашу посылку без задержек, загрузите или распечатайте накладную до прибытия нашего курьера."
                android:textColor="@color/realBlack"
                android:textSize="14dp"
                app:layout_constraintBottom_toBottomOf="@id/markFrame"
                app:layout_constraintLeft_toRightOf="@id/markFrame"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/markFrame" />


            <ImageView
                android:id="@+id/pdf_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="25dp"
                android:src="@drawable/ic_pdf_generate"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="@id/markFrame"
                app:layout_constraintRight_toRightOf="@id/markFrame"
                app:layout_constraintTop_toBottomOf="@id/markFrame" />

            <TextView
                android:id="@+id/pdf_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/pdf_title"
                android:textColor="@color/realBlack"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@id/pdf_icon"
                app:layout_constraintLeft_toRightOf="@id/pdf_icon"
                app:layout_constraintTop_toTopOf="@id/pdf_icon" />


            <TextView
                android:id="@+id/send_for_amil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send_for_amil"
                android:textColor="@color/nextBt"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/download"
                app:layout_constraintTop_toBottomOf="@id/pdf_icon" />


            <TextView
                android:id="@+id/download"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/donwload"
                android:textColor="@color/nextBt"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/send_for_amil"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pdf_icon" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        android:layout_margin="15dp"
        android:background="@drawable/passajir_drawable"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>